--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-tests.txt
+        pip install -e .[dev]
     - name: Run tests
       env:
         POSTGRES_DSN: postgresql://postgres:postgres@localhost:5432/postgres
