--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling >= 1.26"]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
@@ -42,7 +42,7 @@ dependencies = [
 dev = [
     "pytest==8.3.5",
     "psycopg2-binary>=2.8.1",
-    "build"
+    "build",
     "twine"
 ]
 
