--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,6 +37,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
+    - name: Linter check
+      run: ruff check
     - name: Run tests
       env:
         POSTGRES_DSN: postgresql://postgres:postgres@localhost:5432/postgres
