--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,9 +37,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[dev]
-    - name: Linter check
-      run: ruff check
-    - name: Run tests
+    - name: Run all checks
       env:
         POSTGRES_DSN: postgresql://postgres:postgres@localhost:5432/postgres
-      run: pytest -s -v
+      run: poe check
