--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,9 @@ dev = [
     "build",
     "twine",
     "ruff==0.14.0",
-    "poethepoet==0.37.0"
+    "poethepoet==0.37.0",
+    "mypy==1.18.2",
+    "types-peewee"
 ]
 
 
@@ -59,6 +61,9 @@ Issues = "https://github.com/kalombos/peewee_migrate2/issues"
 pw_migrate = "peewee_migrate.cli:cli"
 
 
+[tool.mypy]
+exclude = "(venv|migrations)"
+
 [tool.ruff]
 line-length = 120
 [tool.ruff.lint]
@@ -66,12 +71,17 @@ select = [
     'UP035',
     'F',
     'E',
-    'I'
+    'I',
+    'TC'
 ]
 
 [tool.poe.tasks.lint]
 help = "Run the type checker"
 cmd  = "ruff check"
+
+[tool.poe.tasks.types]
+help = "Run the type checker"
+cmd  = "mypy ."
 
 [tool.poe.tasks.check_format]
 help = "Run the format checker"
@@ -95,4 +105,4 @@ cmd  = "pytest -vv -x"
 
 [tool.poe.tasks.check]
 help = "Run all checks on the code base"
-sequence = ["lint", "check_format", "test"]
+sequence = ["lint", "check_format", "types", "test"]
