--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ authors = [
   {name = "Kirill Klenov"},
   {name = "spumer"},
 ]
+readme = "README.md"
 
 description = "a database migration tool for usage with the peewee ORM"
 readme = "README.rst"
