add CONCURRENTLY feature for indexes add opprotunity to run migrations without transactions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,8 @@ authors = [
   {name = "Kirill Klenov"},
   {name = "spumer"},
 ]
-
 description = "a database migration tool for usage with the peewee ORM"
-readme = "README.rst"
+readme = "README.md"
 requires-python = ">=3.10"
 classifiers=[
     'Development Status :: 4 - Beta',
@@ -68,10 +67,14 @@ ignore_missing_imports = true
 line-length = 120
 [tool.ruff.lint]
 select = [
-    'UP035',
-    'F',
+    'A',
+    'B',
+    'C',
     'E',
+    'F',
+    'G',
     'I',
+    'UP035',
     'TC'
 ]
 
