--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["peewee_migrate"]
+packages = ["miggy"]
 
 
 [project]
-name = "peewee-migrate2"
-version = "1.6.5"
+name = "miggy"
+version = "0.0.1"
 authors = [
   {name = "Gorshkov Nikolay", email = "nogamemorebrain@gmail.com"},
   {name = "Kirill Klenov"},
@@ -56,7 +56,7 @@ Issues = "https://github.com/kalombos/peewee_migrate2/issues"
 
 
 [project.scripts]
-pw_migrate = "peewee_migrate.cli:cli"
+miggy = "miggy.cli:cli"
 
 
 [tool.mypy]
