--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,6 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["miggy"]
-
-
 [project]
 name = "miggy"
-version = "0.0.1"
+version = "2.0.0"
 authors = [
   {name = "Gorshkov Nikolay", email = "nogamemorebrain@gmail.com"},
   {name = "Kirill Klenov"},
@@ -41,8 +33,6 @@ dependencies = [
 dev = [
     "pytest==8.4.2",
     "psycopg2-binary>=2.8.1",
-    "build",
-    "twine",
     "ruff==0.14.2",
     "poethepoet==0.37.0",
     "mypy==1.18.2",
@@ -51,13 +41,20 @@ dev = [
 
 
 [project.urls]
-Homepage = "https://github.com/kalombos/peewee_migrate2"
-Issues = "https://github.com/kalombos/peewee_migrate2/issues"
+Homepage = "https://github.com/kalombos/miggy"
+Issues = "https://github.com/kalombos/miggy/issues"
 
 
 [project.scripts]
 miggy = "miggy.cli:cli"
 
+[build-system]
+requires = ["uv_build>=0.9.6,<0.10.0"]
+build-backend = "uv_build"
+
+[tool.uv.build-backend]
+module-name = "miggy"
+module-root = ""
 
 [tool.mypy]
 exclude = "(venv|migrations)"
