refactor and add features
- Refactor migrator.python and migrator.sql methods  
- Refactor Migration class  
- Add migrator.add_operation method  
- Add playhouse.psycopg3_ext import for psycopg3 backend   #61
- Refactor fake migration creation logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,10 @@ select = [
     'TC'
 ]
 
+[tool.poe.executor]
+type = "simple"
+
+
 [tool.poe.tasks.lint]
 help = "Run the type checker"
 cmd  = "ruff check"
