--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dev = [
     "ruff==0.14.3",
     "poethepoet==0.37.0",
     "mypy==1.18.2",
+    "Sphinx==8.1.3",
+    "sphinx-rtd-theme==3.0.2"
 ]
 
 
