--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,8 @@ dev = [
 ]
 docs = [
     "Sphinx==8.1.3",
-    "sphinx-rtd-theme==3.0.2"
+    "sphinx-rtd-theme==3.0.2",
+    "sphinx-click==6.1.0"
 ]
 
 
