fix: fix format update peewee version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers=[
 license = "BSD-4-Clause"
 
 dependencies = [
-    "peewee>=3.17.9",
+    "peewee>=3.17.9,<4.0",
     "click>=8.3.1"
 ]
 
